chore(updatecli) fix manifests for 0.35.1
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/docker-ce.yaml
+++ b/updatecli/weekly.d/docker-ce.yaml
@@ -1,5 +1,5 @@
 ---
-title: Bump docker-ce version
+name: Bump docker-ce version
 
 scms:
   default:
@@ -41,5 +41,6 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    targets:
-      - default
+    spec:
+      labels:
+        - dependencies
