--- a/updatecli/weekly.d/jenkinscontroller-tools-maven.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-tools-maven.yaml
@@ -1,4 +1,5 @@
-title: Bump Maven version (Jenkins tools) on all controllers
+---
+name: Bump Maven version (Jenkins tools) on all controllers
 
 scms:
   default:
@@ -46,5 +47,6 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    targets:
-      - setMavenVersion
+    spec:
+      labels:
+        - dependencies
