--- a/updatecli/weekly.d/jenkinscontroller-tools-jdk11.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-tools-jdk11.yaml
@@ -1,4 +1,5 @@
-title: Bump JDK11 version (Jenkins tools) on all controllers
+---
+name: Bump JDK11 version (Jenkins tools) on all controllers
 
 scms:
   default:
@@ -47,5 +48,6 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    targets:
-      - setJDK11Version
+    spec:
+      labels:
+        - dependencies
