--- a/updatecli/weekly.d/puppet-modules/concat.yaml
+++ b/updatecli/weekly.d/puppet-modules/concat.yaml
@@ -1,5 +1,5 @@
 ---
-title: Bump the Concat Puppet Module
+name: Bump the Concat Puppet Module
 
 scms:
   default:
@@ -24,6 +24,8 @@ sources:
       username: "{{ .github.username }}"
       versionfilter:
         kind: semver
+    transformers:
+      - trimprefix: v
 
 conditions:
   testPuppetModuleExists:
@@ -43,15 +45,13 @@ targets:
         mod 'puppetlabs-concat'(.*)
       replacepattern: >
         mod 'puppetlabs-concat', '{{ source "latestVersion" }}'
-#     scmid: default
+    scmid: default
 
-# pullrequests:
-#   default:
-#     kind: github
-#     scmid: default
-#     targets:
-#       - puppetfile
-#     spec:
-#       labels:
-#         - puppet-module
-#         - dependencies
+pullrequests:
+  default:
+    kind: github
+    scmid: default
+    spec:
+      labels:
+        - puppet-module
+        - dependencies
