--- a/updatecli/weekly.d/puppet-modules/lvm.yaml
+++ b/updatecli/weekly.d/puppet-modules/lvm.yaml
@@ -1,5 +1,5 @@
 ---
-title: Bump the LVM Puppet Module
+name: Bump the LVM Puppet Module
 
 scms:
   default:
@@ -24,6 +24,8 @@ sources:
       username: "{{ .github.username }}"
       versionfilter:
         kind: semver
+    transformers:
+      - trimprefix: v
 
 conditions:
   testPuppetModuleExists:
@@ -49,8 +51,6 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    targets:
-      - puppetfile
     spec:
       labels:
         - puppet-module
