chore(vagrant) use the correct docker-ce package for ubuntu 20.04
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -5,6 +5,9 @@ lookup_options:
       strategy: deep
       merge_hash_arrays: true
 
+## Vagrant uses Ubuntu 20.04: docker-ce package version is different than the default for 18.04 in common.yaml
+docker::version: "5:20.10.21~3-0~ubuntu-focal"
+
 profile::jenkinscontroller::ci_fqdn: 'cert.ci.jenkins.io'
 profile::jenkinscontroller::ci_resource_domain: 'assets.cert.ci.jenkins.io'
 profile::jenkinscontroller::proxy_port: 443
