--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -176,6 +176,15 @@ profile::jenkinscontroller::jcasc:
             cpus: 4
             memory: 8
             imagePullSecrets: dockerhub-credential
+          - name: jnlp-maven-19
+            imageName: jnlp-maven-all-in-one
+            javaHome: /opt/jdk-19
+            labels:
+              - maven-19
+              - jdk19
+            cpus: 4
+            memory: 8
+            imagePullSecrets: dockerhub-credential
           - name: jnlp-webbuilder
             agentJavaBin: /opt/java/openjdk/bin/java
             cpus: 4
@@ -263,6 +272,15 @@ profile::jenkinscontroller::jcasc:
             labels:
               - maven-17
               - jdk17
+            cpus: 4
+            memory: 8
+            imagePullSecrets: dockerhub-credential
+          - name: jnlp-maven-19
+            imageName: jnlp-maven-all-in-one
+            javaHome: /opt/jdk-19
+            labels:
+              - maven-19
+              - jdk19
             cpus: 4
             memory: 8
             imagePullSecrets: dockerhub-credential
